5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4479/executions/1582_1333.log
== SUBMITION (2019-04-23 15:43:39) 
-- CODE:
expressao = 30-3**2+8//3***10
print(expressao)
-- EXECUTION TIME:
0.11306
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao = 30-3**2+8//3***10
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 15:43:56) 
-- CODE:
expressao = 30-3**2+8//3***10
print(expressao)
-- EXECUTION TIME:
0.125799
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao = 30-3**2+8//3***10
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 15:43:57) 
-- CODE:
expressao = 30-3**2+8//3***10
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30-3**2+8//3***10
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 15:45:12) 
-- CODE:
expressao = 30-3**2+8//3**2*10
print(expressao)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 15:45:14) 
-- CODE:
expressao = 30-3**2+8//3**2*10
print(expressao)
-- EXECUTION TIME:
0.146243
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
